Adicionados os elementos de interface da aba Bichos

--- a/app/src/main/res/layout/fragment_animais.xml
+++ b/app/src/main/res/layout/fragment_animais.xml
@@ -1,9 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.AnimaisFragment">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/imageCao"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/cao"
+            app:layout_constraintBottom_toTopOf="@+id/imageGato"
+            app:layout_constraintEnd_toStartOf="@+id/imageOvelha"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="spread" />
+
+        <ImageView
+            android:id="@+id/imageGato"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/gato"
+            app:layout_constraintBottom_toTopOf="@+id/imageLeao"
+            app:layout_constraintEnd_toStartOf="@+id/imageMacaco"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageCao" />
+
+        <ImageView
+            android:id="@+id/imageLeao"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/leao"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imageVaca"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageGato" />
+
+        <ImageView
+            android:id="@+id/imageVaca"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/vaca"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/imageLeao"
+            app:layout_constraintTop_toBottomOf="@+id/imageMacaco" />
+
+        <ImageView
+            android:id="@+id/imageMacaco"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+           android:src="@drawable/macaco"
+            app:layout_constraintBottom_toTopOf="@+id/imageVaca"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/imageGato"
+            app:layout_constraintTop_toBottomOf="@+id/imageOvelha" />
+
+        <ImageView
+            android:id="@+id/imageOvelha"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/ovelha"
+            app:layout_constraintBottom_toTopOf="@+id/imageMacaco"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/imageCao"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
