--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,11 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">#855039</item>
+        <item name="colorPrimaryDark">#4B3621</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorBackground">#F5E9B9</item>
+
     </style>
 
 </resources>
