--- a/app/src/main/res/layout/fragment_numeros.xml
+++ b/app/src/main/res/layout/fragment_numeros.xml
@@ -1,9 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.NumerosFragment">
 
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/imageUm"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_constraintBottom_toTopOf="@+id/imageTres"
+            android:src="@drawable/um"
+            app:layout_constraintBottom_toTopOf="@+id/imageTres"
+            app:layout_constraintEnd_toStartOf="@+id/imageDois"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/imageTres"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/tres"
+            app:layout_constraintBottom_toTopOf="@+id/imageCinco"
+            app:layout_constraintEnd_toStartOf="@+id/imageQuatro"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageUm" />
+
+        <ImageView
+            android:id="@+id/imageCinco"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/cinco"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imageSeis"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageTres" />
+
+        <ImageView
+            android:id="@+id/imageSeis"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/seis"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageCinco"
+            app:layout_constraintTop_toBottomOf="@+id/imageQuatro"
+            tools:layout_editor_absoluteX="185dp" />
+
+        <ImageView
+            android:id="@+id/imageQuatro"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/quatro"
+            app:layout_constraintBottom_toTopOf="@+id/imageSeis"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageTres"
+            app:layout_constraintTop_toBottomOf="@+id/imageDois"
+            tools:layout_editor_absoluteX="185dp" />
+
+        <ImageView
+            android:id="@+id/imageDois"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/dois"
+            app:layout_constraintBottom_toTopOf="@+id/imageQuatro"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageUm"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="171dp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
